--- a/currenc/manifest.json
+++ b/currenc/manifest.json
@@ -10,32 +10,42 @@
   "theme_color": "#c54b0f",
   "icons": [
     {
-      "src": "./images/192x192.png",
+      "src": "./images/currenc-icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "./images/currenc-icon-256x256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+    },
+    {
+      "src": "./images/currenc-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "./images/168x168.png",
+      "src": "./images/currenc-icon-168x168.png",
       "type": "image/png",
       "sizes": "168x168"
     },
     {
-      "src": "./images/144x144.png",
+      "src": "./images/currenc-icon-144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "./images/96x96.png",
+      "src": "./images/currenc-icon-96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "./images/72x72.png",
+      "src": "./images/currenc-icon-72x72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "./images/48x48.png",
+      "src": "./images/currenc-icon-48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     }
